@@ -68,6 +68,18 @@ log messages to \fIfile\fP instead of standard error output
 \fB\-u\fR <\fInum\fP>
 pause \fInum\fP microseconds after each write \- might increase performance on some drives with very low performace (< 1 MB/sec)
 .TP 
+\fB\-r\fR <\fIrate\fP>
+Set the maximum read rate to <\fIrate\fP>. <\fIrate\fP> can be given in
+either Bytes, kBytes, MBytes, or GBytes per second. To do so, use an apropriate
+suffix (i.e. k,M,G). This options is useful if you have a tape that is
+capable to transfer data faster than the host can handle it. In this
+case you can use this option to limit the transfer rate and keep the
+tape running. Be aware that this is both good for your tape drive, and
+enhances overall performance, by avoiding tape screwing.
+.TP 
+\fB\-R\fR <\fIrate\fP>
+Same as above only for setting the transfer limit for the writer.
+.TP 
 \fB\-A\fR <\fIcmd\fP>
 used devices is an autoloader which uses \fIcmd\fP to load the next volume
 .TP 
