@@ -1,3 +1,10 @@
+20060616:
+- added speed limiting (options -r and -R)
+- fix errormessage in calcint
+- show option -d in usage output only if it is available
+- use of float really doesn't make any sense nowadays;
+  changed all floats to double
+
 20060421:
 - set exitcode to failure whenever an error occures
 - fixed a warning
